--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-highlight-words": "^0.17.0",
     "react-icons": "^4.3.1",
     "react-json-view": "^1.21.3",
+    "react-modal": "^3.14.4",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.0.1"
   },
